Add capacity calculation in NASA randomized

--- a/battery-rul-estimation/experiments/nasa-randomized/lstm_rul_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/lstm_rul_nasa.ipynb
@@ -391,6 +391,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 0\n",
+    "for b in train_battery_range:\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(x=train_y_soh[a:b], y=train_predictions[a:b,0],\n",
+    "                        mode='lines', name='predicted'))\n",
+    "    fig.add_trace(go.Scatter(x=train_y_soh[a:b], y=train_y[a:b],\n",
+    "                        mode='lines', name='actual'))\n",
+    "    fig.update_layout(title='Results on training',\n",
+    "                    xaxis_title='SoH Capacity',\n",
+    "                    yaxis_title='Remaining Ah until EOL',\n",
+    "                    xaxis={'autorange':'reversed'},\n",
+    "                    width=1400,\n",
+    "                    height=600)\n",
+    "    fig.show()\n",
+    "    a = b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "Pe1Pzp04J1b5"
    },
@@ -424,6 +447,29 @@
     "\n",
     "test_y = y_norm.denormalize(test_y)\n",
     "test_predictions = y_norm.denormalize(test_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 0\n",
+    "for b in test_battery_range:\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(x=test_y_soh[a:b], y=test_predictions[a:b,0],\n",
+    "                        mode='lines', name='predicted'))\n",
+    "    fig.add_trace(go.Scatter(x = test_y_soh[a:b], y=test_y[a:b],\n",
+    "                        mode='lines', name='actual'))\n",
+    "    fig.update_layout(title='Results on testing',\n",
+    "                    xaxis_title='SoH Capacity',\n",
+    "                    yaxis_title='Remaining Ah until EOL',\n",
+    "                    xaxis={'autorange':'reversed'},\n",
+    "                    width=1400,\n",
+    "                    height=600)\n",
+    "    fig.show()\n",
+    "    a = b"
    ]
   },
   {
