--- a/battery-rul-estimation/experiments/nasa-randomized/autoencoder_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/autoencoder_nasa.ipynb
@@ -2,20 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "jw9FMur02UtZ"
-   },
    "source": [
     "# Autoencoder Nasa Randomized dataset"
-   ]
+   ],
+   "metadata": {
+    "id": "jw9FMur02UtZ"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "XKxZ90kO2Uta"
-   },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -52,45 +48,45 @@
     "sys.path.append(data_path)\n",
     "from data_processing.nasa_random_data import NasaRandomizedData\n",
     "from data_processing.prepare_rul_data import RulHandler"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "XKxZ90kO2Uta"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MfVCRISs2Utc"
-   },
    "source": [
     "### Config logging"
-   ]
+   ],
+   "metadata": {
+    "id": "MfVCRISs2Utc"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "K2IvySBk2Utd"
-   },
-   "outputs": [],
    "source": [
     "reload(logging)\n",
     "logging.basicConfig(format='%(asctime)s [%(levelname)s]: %(message)s', level=logging.DEBUG, datefmt='%Y/%m/%d %H:%M:%S')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "K2IvySBk2Utd"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "KsbkwTX22Utf"
-   },
    "source": [
     "# Load Data"
-   ]
+   ],
+   "metadata": {
+    "id": "KsbkwTX22Utf"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "NSFp-2Rl2Utj"
-   },
-   "outputs": [],
    "source": [
     "train_names_20k = [\n",
     "        'Battery_Uniform_Distribution_Variable_Charge_Room_Temp_DataSet_2Post/data/Matlab/RW1',\n",
@@ -141,39 +137,38 @@
     "test_names_no_100k = [\n",
     "        'RW_Skewed_High_Room_Temp_DataSet_2Post/data/Matlab/RW20',\n",
     "]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "NSFp-2Rl2Utj"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "k-yTrXQ12Utm"
-   },
-   "outputs": [],
    "source": [
     "nasa_data_handler = NasaRandomizedData(data_path)\n",
     "rul_handler = RulHandler()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "k-yTrXQ12Utm"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bAAxueIqkZM9"
-   },
    "source": [
     "## Data preparation"
-   ]
+   ],
+   "metadata": {
+    "id": "bAAxueIqkZM9"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "TbntMzBZkZM9",
-    "tags": []
-   },
-   "outputs": [],
    "source": [
-    "(train_x_10k, _, test_x_10k, _, _, _, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_10k, test_names_10k)\n",
+    "(train_x_10k, _, test_x_10k, _, battery_range_cycle_train_10k, battery_range_cycle_test_10k, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_10k, test_names_10k)\n",
     "(train_x_20k, _, test_x_20k, _, _, _, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_20k, test_names_20k)\n",
     "(train_x_100k, _, test_x_no_100k, _, _, _, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_100k, test_names_no_100k)\n",
     "\n",
@@ -209,24 +204,25 @@
     "\n",
     "x_norm = rul_handler.Normalization()\n",
     "train_x, test_x = x_norm.normalize(train_x, test_x)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "TbntMzBZkZM9",
+    "tags": []
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7iYU-n0K2Utq"
-   },
    "source": [
     "# Model training"
-   ]
+   ],
+   "metadata": {
+    "id": "7iYU-n0K2Utq"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "LSx96n4w2Uts"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    EXPERIMENT = \"autoencoder_nasa_randomized\"\n",
@@ -234,52 +230,52 @@
     "    experiment_name = time.strftime(\"%Y-%m-%d-%H-%M-%S\") + '_' + EXPERIMENT\n",
     "    print(experiment_name)\n",
     "\n",
-    "    # Model definition\n",
+    "# Model definition\n",
     "\n",
-    "    opt = tf.keras.optimizers.Adam(learning_rate=0.0002)\n",
-    "    LATENT_DIM = 20\n",
+    "opt = tf.keras.optimizers.Adam(learning_rate=0.0002)\n",
+    "LATENT_DIM = 15\n",
     "\n",
-    "    class Autoencoder(Model):\n",
-    "        def __init__(self, latent_dim):\n",
-    "            super(Autoencoder, self).__init__()\n",
-    "            self.latent_dim = latent_dim\n",
-    "            self.encoder = tf.keras.Sequential([\n",
-    "                layers.Input(shape=(train_x.shape[1], train_x.shape[2])),\n",
-    "                #layers.MaxPooling1D(5, padding='same'),\n",
-    "                layers.Conv1D(filters=16, kernel_size=5, strides=2, activation='relu', padding='same'),\n",
-    "                layers.Conv1D(filters=8, kernel_size=3, strides=2, activation='relu', padding='same'),\n",
-    "                layers.Flatten(),\n",
-    "                layers.Dense(self.latent_dim, activation='relu')\n",
-    "            ])\n",
-    "            self.decoder = tf.keras.Sequential([\n",
-    "                layers.Input(shape=(self.latent_dim)),\n",
-    "                layers.Dense(23600, activation='relu'),\n",
-    "                layers.Reshape((2950, 8)),\n",
-    "                layers.Conv1DTranspose(filters=8, kernel_size=3, strides=2, activation='relu', padding='same'),\n",
-    "                layers.Conv1DTranspose(filters=16, kernel_size=5, strides=2, activation='relu', padding='same'),\n",
-    "                layers.Conv1D(3, kernel_size=3, activation='relu', padding='same'),\n",
-    "                #layers.UpSampling1D(5),\n",
-    "            ])\n",
+    "class Autoencoder(Model):\n",
+    "    def __init__(self, latent_dim):\n",
+    "        super(Autoencoder, self).__init__()\n",
+    "        self.latent_dim = latent_dim\n",
+    "        self.encoder = tf.keras.Sequential([\n",
+    "            layers.Input(shape=(train_x.shape[1], train_x.shape[2])),\n",
+    "            #layers.MaxPooling1D(5, padding='same'),\n",
+    "            layers.Conv1D(filters=16, kernel_size=5, strides=2, activation='relu', padding='same'),\n",
+    "            layers.Conv1D(filters=8, kernel_size=3, strides=2, activation='relu', padding='same'),\n",
+    "            layers.Flatten(),\n",
+    "            layers.Dense(self.latent_dim, activation='relu')\n",
+    "        ])\n",
+    "        self.decoder = tf.keras.Sequential([\n",
+    "            layers.Input(shape=(self.latent_dim)),\n",
+    "            layers.Dense(23600, activation='relu'),\n",
+    "            layers.Reshape((2950, 8)),\n",
+    "            layers.Conv1DTranspose(filters=8, kernel_size=3, strides=2, activation='relu', padding='same'),\n",
+    "            layers.Conv1DTranspose(filters=16, kernel_size=5, strides=2, activation='relu', padding='same'),\n",
+    "            layers.Conv1D(3, kernel_size=3, activation='relu', padding='same'),\n",
+    "            #layers.UpSampling1D(5),\n",
+    "        ])\n",
     "\n",
     "\n",
-    "        def call(self, x):\n",
-    "            encoded = self.encoder(x)\n",
-    "            decoded = self.decoder(encoded)\n",
-    "            return decoded\n",
+    "    def call(self, x):\n",
+    "        encoded = self.encoder(x)\n",
+    "        decoded = self.decoder(encoded)\n",
+    "        return decoded\n",
     "\n",
-    "    autoencoder = Autoencoder(LATENT_DIM)\n",
-    "    autoencoder.compile(optimizer=opt, loss='mse', metrics=['mse', 'mae', 'mape', tf.keras.metrics.RootMeanSquaredError(name='rmse')])\n",
-    "    autoencoder.encoder.summary()\n",
-    "    autoencoder.decoder.summary()"
-   ]
+    "autoencoder = Autoencoder(LATENT_DIM)\n",
+    "autoencoder.compile(optimizer=opt, loss='mse', metrics=['mse', 'mae', 'mape', tf.keras.metrics.RootMeanSquaredError(name='rmse')])\n",
+    "autoencoder.encoder.summary()\n",
+    "autoencoder.decoder.summary()"
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "LSx96n4w2Uts"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "AIEcv6Ey2Utu"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    history = autoencoder.fit(train_x, train_x,\n",
@@ -288,65 +284,66 @@
     "                                verbose=1,\n",
     "                                validation_split=0.1\n",
     "                               )"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "AIEcv6Ey2Utu"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "oNHlqcvP2Utx"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
-    "    autoencoder.save(data_path + 'results/trained_model/%s.h5' % experiment_name)\n",
+    "    autoencoder.save_weights(data_path + 'results/trained_model/%s/model' % experiment_name)\n",
     "\n",
     "    hist_df = pd.DataFrame(history.history)\n",
-    "    hist_csv_file = data_path + 'results/trained_model/%s_history.csv' % experiment_name\n",
+    "    hist_csv_file = data_path + 'results/trained_model/%s/history.csv' % experiment_name\n",
     "    with open(hist_csv_file, mode='w') as f:\n",
     "        hist_df.to_csv(f)\n",
     "    history = history.history"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "oNHlqcvP2Utx"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
-    "    history = pd.read_csv(data_path + 'results/trained_model/%s_history.csv' % RESULT_NAME)\n",
-    "    autoencoder = keras.models.load_model(data_path + 'results/trained_model/%s.h5' % RESULT_NAME)\n",
-    "    autoencoder.summary()"
-   ]
+    "    history = pd.read_csv(data_path + 'results/trained_model/%s/history.csv' % RESULT_NAME)\n",
+    "    autoencoder.load_weights(data_path + 'results/trained_model/%s/model' % RESULT_NAME)\n",
+    "    autoencoder.encoder.summary()\n",
+    "    autoencoder.decoder.summary()"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
     "        print(history)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LH5RANQIEQVx"
-   },
    "source": [
     "### Testing"
-   ]
+   ],
+   "metadata": {
+    "id": "LH5RANQIEQVx"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "ggNKW-VqENFN"
-   },
-   "outputs": [],
    "source": [
     "results = autoencoder.evaluate(test_x, test_x, return_dict = True)\n",
     "print(results)\n",
@@ -355,24 +352,24 @@
     "    result = autoencoder.evaluate(np.array([test_x[index, :, :]]), np.array([test_x[index, :, :]]), return_dict = True, verbose=0)\n",
     "    max_rmse = max(max_rmse, result['rmse'])\n",
     "print(\"Max rmse: {}\".format(max_rmse))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "ggNKW-VqENFN"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uiqyD8Bn2Utz"
-   },
    "source": [
     "# Results Visualization"
-   ]
+   ],
+   "metadata": {
+    "id": "uiqyD8Bn2Utz"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "jH9RrBRN2Utz"
-   },
-   "outputs": [],
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(y=history['loss'],\n",
@@ -385,29 +382,31 @@
     "                  width=1400,\n",
     "                  height=600)\n",
     "fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "jH9RrBRN2Utz"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "train_predictions = autoencoder.predict(train_x)\n",
     "labels = ['Voltage', 'Current', 'Temperature']"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
-    "    fig.add_trace(go.Scatter(y=train_predictions[0,:,i],\n",
+    "    fig.add_trace(go.Scatter(y=train_predictions[5,:,i],\n",
     "                        mode='lines', name='predicted'))\n",
-    "    fig.add_trace(go.Scatter(y=train_x[0,:,i],\n",
+    "    fig.add_trace(go.Scatter(y=train_x[5,:,i],\n",
     "                        mode='lines', name='actual'))\n",
     "    fig.update_layout(title='Results on training - battery new',\n",
     "                    xaxis_title='Step',\n",
@@ -415,19 +414,19 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
-    "    fig.add_trace(go.Scatter(y=train_predictions[int(train_battery_range[0]/2),:,i],\n",
+    "    fig.add_trace(go.Scatter(y=train_predictions[int(battery_range_cycle_train_10k[0]/2),:,i],\n",
     "                        mode='lines', name='predicted'))\n",
-    "    fig.add_trace(go.Scatter(y=train_x[0,:,i],\n",
+    "    fig.add_trace(go.Scatter(y=train_x[int(battery_range_cycle_train_10k[0]/2),:,i],\n",
     "                        mode='lines', name='actual'))\n",
     "    fig.update_layout(title='Results on training - middle life',\n",
     "                    xaxis_title='Step',\n",
@@ -435,19 +434,19 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
-    "    fig.add_trace(go.Scatter(y=train_predictions[train_battery_range[0]-1,:,i],\n",
+    "    fig.add_trace(go.Scatter(y=train_predictions[battery_range_cycle_train_10k[0]-5,:,i],\n",
     "                        mode='lines', name='predicted'))\n",
-    "    fig.add_trace(go.Scatter(y=train_x[0,:,i],\n",
+    "    fig.add_trace(go.Scatter(y=train_x[battery_range_cycle_train_10k[0]-5,:,i],\n",
     "                        mode='lines', name='actual'))\n",
     "    fig.update_layout(title='Results on training - end of life',\n",
     "                    xaxis_title='Step',\n",
@@ -455,7 +454,86 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "test_predictions = autoencoder.predict(test_x)\n",
+    "labels = ['Voltage', 'Current', 'Temperature']"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "for i in range(train_x.shape[2]):\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(y=test_predictions[0,:,i],\n",
+    "                        mode='lines', name='predicted'))\n",
+    "    fig.add_trace(go.Scatter(y=test_x[0,:,i],\n",
+    "                        mode='lines', name='actual'))\n",
+    "    fig.update_layout(title='Results on testing - battery new',\n",
+    "                    xaxis_title='Step',\n",
+    "                    yaxis_title=labels[i],\n",
+    "                    width=1400,\n",
+    "                    height=600)\n",
+    "    fig.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "for i in range(train_x.shape[2]):\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(y=test_predictions[int(battery_range_cycle_test_10k[0]/2),:,i],\n",
+    "                        mode='lines', name='predicted'))\n",
+    "    fig.add_trace(go.Scatter(y=test_x[int(battery_range_cycle_test_10k[0]/2),:,i],\n",
+    "                        mode='lines', name='actual'))\n",
+    "    fig.update_layout(title='Results on testing - middle life',\n",
+    "                    xaxis_title='Step',\n",
+    "                    yaxis_title=labels[i],\n",
+    "                    width=1400,\n",
+    "                    height=600)\n",
+    "    fig.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "for i in range(train_x.shape[2]):\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(y=test_predictions[battery_range_cycle_test_10k[0]-5,:,i],\n",
+    "                        mode='lines', name='predicted'))\n",
+    "    fig.add_trace(go.Scatter(y=test_x[battery_range_cycle_test_10k[0]-5,:,i],\n",
+    "                        mode='lines', name='actual'))\n",
+    "    fig.update_layout(title='Results on testing - end of life',\n",
+    "                    xaxis_title='Step',\n",
+    "                    yaxis_title=labels[i],\n",
+    "                    width=1400,\n",
+    "                    height=600)\n",
+    "    fig.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -465,9 +543,13 @@
    "name": "lstm_soh_prediction_only_future.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.2 64-bit"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -479,15 +561,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.9"
   },
   "metadata": {
    "interpreter": {
     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
-  },
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   }
  },
  "nbformat": 4,
