--- a/battery-rul-estimation/experiments/nasa-randomized/lstm_rul_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/lstm_rul_nasa.ipynb
@@ -2,20 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "jw9FMur02UtZ"
-   },
    "source": [
     "# RUL estimation Nasa Randomized dataset"
-   ]
+   ],
+   "metadata": {
+    "id": "jw9FMur02UtZ"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "XKxZ90kO2Uta"
-   },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -57,45 +53,45 @@
     "sys.path.append(data_path)\n",
     "from data_processing.nasa_random_data import NasaRandomizedData\n",
     "from data_processing.prepare_rul_data import RulHandler"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "XKxZ90kO2Uta"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MfVCRISs2Utc"
-   },
    "source": [
     "### Config logging"
-   ]
+   ],
+   "metadata": {
+    "id": "MfVCRISs2Utc"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "K2IvySBk2Utd"
-   },
-   "outputs": [],
    "source": [
     "reload(logging)\n",
     "logging.basicConfig(format='%(asctime)s [%(levelname)s]: %(message)s', level=logging.DEBUG, datefmt='%Y/%m/%d %H:%M:%S')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "K2IvySBk2Utd"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "KsbkwTX22Utf"
-   },
    "source": [
     "# Load Data"
-   ]
+   ],
+   "metadata": {
+    "id": "KsbkwTX22Utf"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "NSFp-2Rl2Utj"
-   },
-   "outputs": [],
    "source": [
     "train_names = [\n",
     "        'Battery_Uniform_Distribution_Variable_Charge_Room_Temp_DataSet_2Post/data/Matlab/RW1',\n",
@@ -129,45 +125,44 @@
     "\n",
     "test_names = [\n",
     "        'Battery_Uniform_Distribution_Variable_Charge_Room_Temp_DataSet_2Post/data/Matlab/RW8',\n",
-    "        'Battery_Uniform_Distribution_Discharge_Room_Temp_DataSet_2Post/data/Matlab/RW6',\n",
+    "        #'Battery_Uniform_Distribution_Discharge_Room_Temp_DataSet_2Post/data/Matlab/RW6',\n",
     "        #'Battery_Uniform_Distribution_Charge_Discharge_DataSet_2Post/data/Matlab/RW12',\n",
     "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW16',\n",
     "        'RW_Skewed_High_Room_Temp_DataSet_2Post/data/Matlab/RW20',\n",
     "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW24',\n",
     "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW28',\n",
     "]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "NSFp-2Rl2Utj"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "k-yTrXQ12Utm"
-   },
-   "outputs": [],
    "source": [
     "nasa_data_handler = NasaRandomizedData(data_path)\n",
     "\n",
     "rul_handler = RulHandler()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "k-yTrXQ12Utm"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bAAxueIqkZM9"
-   },
    "source": [
     "## Data preparation"
-   ]
+   ],
+   "metadata": {
+    "id": "bAAxueIqkZM9"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "TbntMzBZkZM9",
-    "tags": []
-   },
-   "outputs": [],
    "source": [
     "CAPACITY_THRESHOLDS = None\n",
     "NOMINAL_CAPACITY = 2.2\n",
@@ -187,57 +182,61 @@
     "del globals()[\"time_test\"]\n",
     "train_x, test_x = rul_handler.compress_cycle(train_x, test_x)\n",
     "\n",
-    "\n",
     "x_norm = rul_handler.Normalization()\n",
     "train_x, test_x = x_norm.normalize(train_x, test_x)\n",
+    "\n",
     "train_x = rul_handler.battery_life_to_time_series(train_x, N_CYCLE, train_battery_range)\n",
     "test_x = rul_handler.battery_life_to_time_series(test_x, N_CYCLE, test_battery_range)\n",
     "\n",
     "train_x, train_y, train_battery_range, train_y_soh = rul_handler.delete_initial(train_x, train_y, train_battery_range, train_y_soh, WARMUP_TRAIN)\n",
     "test_x, test_y, test_battery_range, test_y_soh = rul_handler.delete_initial(test_x, test_y, test_battery_range, test_y_soh, WARMUP_TEST)\n",
     "\n",
+    "train_x, train_y, train_battery_range, train_y_soh = rul_handler.limit_zeros(train_x, train_y, train_battery_range, train_y_soh)\n",
+    "test_x, test_y, test_battery_range, test_y_soh = rul_handler.limit_zeros(test_x, test_y, test_battery_range, test_y_soh)\n",
+    "\n",
     "# first one is SOH, we keep only RUL\n",
     "train_y = train_y[:,1]\n",
     "test_y = test_y[:,1]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "TbntMzBZkZM9",
+    "tags": []
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "GskElnOAxTil"
-   },
    "source": [
     "### Y normalization"
-   ]
+   ],
+   "metadata": {
+    "id": "GskElnOAxTil"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "5EOallNnxSpQ"
-   },
-   "outputs": [],
    "source": [
     "y_norm = rul_handler.Normalization()\n",
     "train_y, test_y = y_norm.normalize(train_y, test_y)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "5EOallNnxSpQ"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7iYU-n0K2Utq"
-   },
    "source": [
     "# Model training"
-   ]
+   ],
+   "metadata": {
+    "id": "7iYU-n0K2Utq"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "LSx96n4w2Uts"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    EXPERIMENT = \"lstm_rul_nasa_randomized\"\n",
@@ -252,23 +251,25 @@
     "    model = Sequential()\n",
     "    model.add(Masking(input_shape=(train_x.shape[1], train_x.shape[2])))\n",
     "    model.add(LSTM(128, activation='selu',\n",
-    "                    return_sequences=True))\n",
-    "    model.add(LSTM(64, activation='selu', return_sequences=False))\n",
-    "    model.add(Dense(64, activation='selu'))\n",
-    "    model.add(Dense(32, activation='selu'))\n",
+    "                    return_sequences=True,\n",
+    "                    kernel_regularizer=regularizers.l2(0.0002)))\n",
+    "    model.add(LSTM(64, activation='selu', return_sequences=False,\n",
+    "                    kernel_regularizer=regularizers.l2(0.0002)))\n",
+    "    model.add(Dense(64, activation='selu', kernel_regularizer=regularizers.l2(0.0002)))\n",
+    "    model.add(Dense(32, activation='selu', kernel_regularizer=regularizers.l2(0.0002)))\n",
     "    model.add(Dense(1, activation='linear'))\n",
     "    model.summary()\n",
     "\n",
     "    model.compile(optimizer=opt, loss='huber', metrics=['mse', 'mae', 'mape', tf.keras.metrics.RootMeanSquaredError(name='rmse')])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "LSx96n4w2Uts"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "AIEcv6Ey2Utu"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    history = model.fit(train_x, train_y,\n",
@@ -277,15 +278,15 @@
     "                                verbose=1,\n",
     "                                validation_split=0\n",
     "                               )"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "AIEcv6Ey2Utu"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "oNHlqcvP2Utx"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    model.save(data_path + 'results/trained_model/%s.h5' % experiment_name)\n",
@@ -295,47 +296,47 @@
     "    with open(hist_csv_file, mode='w') as f:\n",
     "        hist_df.to_csv(f)\n",
     "    history = history.history"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "oNHlqcvP2Utx"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    history = pd.read_csv(data_path + 'results/trained_model/%s_history.csv' % RESULT_NAME)\n",
     "    model = keras.models.load_model(data_path + 'results/trained_model/%s.h5' % RESULT_NAME)\n",
     "    model.summary()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
     "        print(history)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LH5RANQIEQVx"
-   },
    "source": [
     "### Testing"
-   ]
+   ],
+   "metadata": {
+    "id": "LH5RANQIEQVx"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "ggNKW-VqENFN"
-   },
-   "outputs": [],
    "source": [
     "results = model.evaluate(test_x, test_y, return_dict = True)\n",
     "print(results)\n",
@@ -344,24 +345,24 @@
     "    result = model.evaluate(np.array([test_x[index, :, :]]), np.array([test_y[index]]), return_dict = True, verbose=0)\n",
     "    max_rmse = max(max_rmse, result['rmse'])\n",
     "print(\"Max rmse: {}\".format(max_rmse))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "ggNKW-VqENFN"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uiqyD8Bn2Utz"
-   },
    "source": [
     "# Results Visualization"
-   ]
+   ],
+   "metadata": {
+    "id": "uiqyD8Bn2Utz"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "jH9RrBRN2Utz"
-   },
-   "outputs": [],
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(y=history['loss'],\n",
@@ -372,27 +373,29 @@
     "                  width=1400,\n",
     "                  height=600)\n",
     "fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "jH9RrBRN2Utz"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "gtLOteXd-d6n"
-   },
-   "outputs": [],
    "source": [
     "train_predictions = model.predict(train_x)\n",
     "\n",
     "train_y = y_norm.denormalize(train_y)\n",
     "train_predictions = y_norm.denormalize(train_predictions)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "gtLOteXd-d6n"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in train_battery_range:\n",
@@ -409,15 +412,13 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "Pe1Pzp04J1b5"
-   },
-   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in train_battery_range:\n",
@@ -433,27 +434,29 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "Pe1Pzp04J1b5"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "m0olyqr4-8BG"
-   },
-   "outputs": [],
    "source": [
     "test_predictions = model.predict(test_x)\n",
     "\n",
     "test_y = y_norm.denormalize(test_y)\n",
     "test_predictions = y_norm.denormalize(test_predictions)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "m0olyqr4-8BG"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in test_battery_range:\n",
@@ -470,15 +473,13 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "uLEl8nALKAgJ"
-   },
-   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in test_battery_range:\n",
@@ -494,7 +495,11 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "uLEl8nALKAgJ"
+   }
   }
  ],
  "metadata": {
@@ -505,7 +510,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "name": "python382jvsc74a57bd031f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6",
+   "name": "python3",
    "display_name": "Python 3.8.2 64-bit"
   },
   "language_info": {
@@ -524,6 +529,9 @@
    "interpreter": {
     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
+  },
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   }
  },
  "nbformat": 4,
