Rename dataset A to Unibo Powertools

--- a/battery-rul-estimation/experiments/unibo-powertools/autoencoder_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/autoencoder_unibo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Autoencoder dataset A"
+    "# Autoencoder UNIBO Powertools Dataset"
    ],
    "metadata": {
     "id": "jw9FMur02UtZ"
@@ -46,7 +46,7 @@
     "    data_path = \"../../\"\n",
     "\n",
     "sys.path.append(data_path)\n",
-    "from data_processing.dataset_a import DatasetA, CycleCols\n",
+    "from data_processing.unibo_powertools_data import UniboPowertoolsData, CycleCols\n",
     "from data_processing.model_data_handler import ModelDataHandler\n",
     "from data_processing.prepare_rul_data import RulHandler"
    ],
@@ -89,7 +89,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "datasetA = DatasetA(\n",
+    "dataset = UniboPowertoolsData(\n",
     "    test_types=[],\n",
     "    chunk_size=1000000,\n",
     "    lines=[37, 40],\n",
@@ -175,8 +175,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "datasetA.prepare_data(train_names, test_names)\n",
-    "datasetA_handler = ModelDataHandler(datasetA, [\n",
+    "dataset.prepare_data(train_names, test_names)\n",
+    "dataset_handler = ModelDataHandler(dataset, [\n",
     "    CycleCols.VOLTAGE,\n",
     "    CycleCols.CURRENT,\n",
     "    CycleCols.TEMPERATURE\n",
@@ -204,7 +204,7 @@
    "source": [
     "(train_x, train_y_soh, test_x, test_y_soh,\n",
     "  train_battery_range, test_battery_range,\n",
-    "  time_train, time_test, current_train, current_test) = datasetA_handler.get_discharge_whole_cycle_future(train_names, test_names)\n",
+    "  time_train, time_test, current_train, current_test) = dataset_handler.get_discharge_whole_cycle_future(train_names, test_names)\n",
     "\n",
     "train_x = train_x[:,:284,:]\n",
     "test_x = test_x[:,:284,:]\n",
@@ -235,7 +235,7 @@
    "execution_count": null,
    "source": [
     "if IS_TRAINING:\n",
-    "    EXPERIMENT = \"autoencoder_dataset_a\"\n",
+    "    EXPERIMENT = \"autoencoder_unibo_dataset\"\n",
     "\n",
     "    experiment_name = time.strftime(\"%Y-%m-%d-%H-%M-%S\") + '_' + EXPERIMENT\n",
     "    print(experiment_name)\n",
