--- a/battery-rul-estimation/experiments/unibo-powertools/lstm_rul_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/lstm_rul_unibo.ipynb
@@ -2,20 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": [
+    "# RUL estimation UNIBO Powertools Dataset"
+   ],
    "metadata": {
     "id": "jw9FMur02UtZ"
-   },
-   "source": [
-    "# RUL estimation dataset A"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "XKxZ90kO2Uta"
-   },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -55,50 +51,50 @@
     "    data_path = \"../../\"\n",
     "\n",
     "sys.path.append(data_path)\n",
-    "from data_processing.dataset_a import DatasetA, CycleCols\n",
+    "from data_processing.unibo_powertools_data import UniboPowertoolsData, CycleCols\n",
     "from data_processing.model_data_handler import ModelDataHandler\n",
     "from data_processing.prepare_rul_data import RulHandler"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "XKxZ90kO2Uta"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MfVCRISs2Utc"
-   },
    "source": [
     "### Config logging"
-   ]
+   ],
+   "metadata": {
+    "id": "MfVCRISs2Utc"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "K2IvySBk2Utd"
-   },
-   "outputs": [],
    "source": [
     "reload(logging)\n",
     "logging.basicConfig(format='%(asctime)s [%(levelname)s]: %(message)s', level=logging.DEBUG, datefmt='%Y/%m/%d %H:%M:%S')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "K2IvySBk2Utd"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "KsbkwTX22Utf"
-   },
    "source": [
     "# Load Data"
-   ]
+   ],
+   "metadata": {
+    "id": "KsbkwTX22Utf"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "DrHYRy-a2Utg"
-   },
-   "outputs": [],
    "source": [
-    "datasetA = DatasetA(\n",
+    "dataset = UniboPowertoolsData(\n",
     "    test_types=[],\n",
     "    chunk_size=1000000,\n",
     "    lines=[37, 40],\n",
@@ -106,15 +102,15 @@
     "    discharge_line=40,\n",
     "    base_path=data_path\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "DrHYRy-a2Utg"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "NSFp-2Rl2Utj"
-   },
-   "outputs": [],
    "source": [
     "train_names = [\n",
     "    '000-DM-3.0-4019-S',#minimum capacity 1.48\n",
@@ -176,43 +172,42 @@
     "\n",
     "    '041-DM-4.00-2320-S',#minimum capacity 3.76, cycles 190\n",
     "]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "NSFp-2Rl2Utj"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "k-yTrXQ12Utm"
-   },
-   "outputs": [],
    "source": [
-    "datasetA.prepare_data(train_names, test_names)\n",
-    "datasetA_handler = ModelDataHandler(datasetA, [\n",
+    "dataset.prepare_data(train_names, test_names)\n",
+    "dataset_handler = ModelDataHandler(dataset, [\n",
     "    CycleCols.VOLTAGE,\n",
     "    CycleCols.CURRENT,\n",
     "    CycleCols.TEMPERATURE\n",
     "])\n",
     "\n",
     "rul_handler = RulHandler()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "k-yTrXQ12Utm"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bAAxueIqkZM9"
-   },
    "source": [
     "## Data preparation"
-   ]
+   ],
+   "metadata": {
+    "id": "bAAxueIqkZM9"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "TbntMzBZkZM9",
-    "tags": []
-   },
-   "outputs": [],
    "source": [
     "CAPACITY_THRESHOLDS = {\n",
     "  3.0 : 2.7,#th 90% - min 2.1, 70%\n",
@@ -228,7 +223,7 @@
     "\n",
     "(train_x, train_y_soh, test_x, test_y_soh,\n",
     "  train_battery_range, test_battery_range,\n",
-    "  time_train, time_test, current_train, current_test) = datasetA_handler.get_discharge_whole_cycle_future(train_names, test_names)\n",
+    "  time_train, time_test, current_train, current_test) = dataset_handler.get_discharge_whole_cycle_future(train_names, test_names)\n",
     "\n",
     "train_y = rul_handler.prepare_y_future(train_names, train_battery_range, train_y_soh, current_train, time_train, CAPACITY_THRESHOLDS)\n",
     "del globals()[\"current_train\"]\n",
@@ -250,48 +245,49 @@
     "# first one is SOH, we keep only RUL\n",
     "train_y = train_y[:,1]\n",
     "test_y = test_y[:,1]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "TbntMzBZkZM9",
+    "tags": []
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "GskElnOAxTil"
-   },
    "source": [
     "### Y normalization"
-   ]
+   ],
+   "metadata": {
+    "id": "GskElnOAxTil"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "5EOallNnxSpQ"
-   },
-   "outputs": [],
    "source": [
     "y_norm = rul_handler.Normalization()\n",
     "train_y, test_y = y_norm.normalize(train_y, test_y)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "5EOallNnxSpQ"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7iYU-n0K2Utq"
-   },
    "source": [
     "# Model training"
-   ]
+   ],
+   "metadata": {
+    "id": "7iYU-n0K2Utq"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "LSx96n4w2Uts"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
-    "    EXPERIMENT = \"lstm_rul_dataset_a\"\n",
+    "    EXPERIMENT = \"lstm_rul_unibo_dataset\"\n",
     "\n",
     "    experiment_name = time.strftime(\"%Y-%m-%d-%H-%M-%S\") + '_' + EXPERIMENT\n",
     "    print(experiment_name)\n",
@@ -313,15 +309,15 @@
     "    model.summary()\n",
     "\n",
     "    model.compile(optimizer=opt, loss='huber', metrics=['mse', 'mae', 'mape', tf.keras.metrics.RootMeanSquaredError(name='rmse')])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "LSx96n4w2Uts"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "AIEcv6Ey2Utu"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    history = model.fit(train_x, train_y, \n",
@@ -330,15 +326,15 @@
     "                                verbose=1,\n",
     "                                validation_split=0\n",
     "                               )"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "AIEcv6Ey2Utu"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "oNHlqcvP2Utx"
-   },
-   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    model.save(data_path + 'results/trained_model/%s.h5' % experiment_name)\n",
@@ -348,47 +344,47 @@
     "    with open(hist_csv_file, mode='w') as f:\n",
     "        hist_df.to_csv(f)\n",
     "    history = history.history"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "oNHlqcvP2Utx"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    history = pd.read_csv(data_path + 'results/trained_model/%s_history.csv' % RESULT_NAME)\n",
     "    model = keras.models.load_model(data_path + 'results/trained_model/%s.h5' % RESULT_NAME)\n",
     "    model.summary()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
     "        print(history)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LH5RANQIEQVx"
-   },
    "source": [
     "### Testing"
-   ]
+   ],
+   "metadata": {
+    "id": "LH5RANQIEQVx"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "ggNKW-VqENFN"
-   },
-   "outputs": [],
    "source": [
     "results = model.evaluate(test_x, test_y, return_dict = True)\n",
     "print(results)\n",
@@ -397,24 +393,24 @@
     "    result = model.evaluate(np.array([test_x[index, :, :]]), np.array([test_y[index]]), return_dict = True, verbose=0)\n",
     "    max_rmse = max(max_rmse, result['rmse'])\n",
     "print(\"Max rmse: {}\".format(max_rmse))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "ggNKW-VqENFN"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uiqyD8Bn2Utz"
-   },
    "source": [
     "# Results Visualization"
-   ]
+   ],
+   "metadata": {
+    "id": "uiqyD8Bn2Utz"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "jH9RrBRN2Utz"
-   },
-   "outputs": [],
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(y=history['loss'],\n",
@@ -425,29 +421,29 @@
     "                  width=1400,\n",
     "                  height=600)\n",
     "fig.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "jH9RrBRN2Utz"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "gtLOteXd-d6n"
-   },
-   "outputs": [],
    "source": [
     "train_predictions = model.predict(train_x)\n",
     "\n",
     "train_y = y_norm.denormalize(train_y)\n",
     "train_predictions = y_norm.denormalize(train_predictions)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "gtLOteXd-d6n"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "ZsYMPQ0i2Ut1"
-   },
-   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in train_battery_range:\n",
@@ -464,15 +460,15 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "ZsYMPQ0i2Ut1"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "Pe1Pzp04J1b5"
-   },
-   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in train_battery_range:\n",
@@ -488,29 +484,29 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "Pe1Pzp04J1b5"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "m0olyqr4-8BG"
-   },
-   "outputs": [],
    "source": [
     "test_predictions = model.predict(test_x)\n",
     "\n",
     "test_y = y_norm.denormalize(test_y)\n",
     "test_predictions = y_norm.denormalize(test_predictions)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "m0olyqr4-8BG"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "9U1MbGnq2Ut4"
-   },
-   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in test_battery_range:\n",
@@ -527,15 +523,15 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "9U1MbGnq2Ut4"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "uLEl8nALKAgJ"
-   },
-   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in test_battery_range:\n",
@@ -551,7 +547,11 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "uLEl8nALKAgJ"
+   }
   }
  ],
  "metadata": {
