Fix battery range

--- a/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_rul_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_rul_nasa.ipynb
@@ -225,6 +225,8 @@
     "battery_range_cycle_train_20k += battery_range_cycle_train_10k[-1]\n",
     "battery_range_cycle_train_100k += battery_range_cycle_train_20k[-1]\n",
     "train_battery_range = np.concatenate((battery_range_cycle_train_10k, battery_range_cycle_train_20k, battery_range_cycle_train_100k), axis=None)\n",
+    "battery_range_cycle_test_20k += battery_range_cycle_test_10k[-1]\n",
+    "battery_range_cycle_test_100k += battery_range_cycle_test_20k[-1]\n",
     "test_battery_range = np.concatenate((battery_range_cycle_test_10k, battery_range_cycle_test_20k, battery_range_cycle_test_100k), axis=None)\n",
     "\n",
     "max_lenght = max(time_train_10k.shape[1], time_train_20k.shape[1], time_train_100k.shape[1], time_test_10k.shape[1], time_test_20k.shape[1], time_test_100k.shape[1])\n",
