--- a/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_rul_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_rul_nasa.ipynb
@@ -269,17 +269,8 @@
     "print(\"train current shape {}\".format(current_train.shape))\n",
     "print(\"test current shape {}\".format(current_test.shape))\n",
     "print(\"train y soh shape {}\".format(train_y_soh.shape))\n",
-    "print(\"test y soh shape {}\".format(test_y_soh.shape))\n",
-    "\n",
-    "\n",
-    "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "TbntMzBZkZM9",
-    "tags": []
-   }
+    "print(\"test y soh shape {}\".format(test_y_soh.shape))"
+   ]
   },
   {
    "cell_type": "code",
@@ -297,10 +288,11 @@
     "del globals()[\"time_train\"]\n",
     "test_y = rul_handler.prepare_y_future(test_names, test_battery_range, test_y_soh, current_test, time_test, CAPACITY_THRESHOLDS, capacity=NOMINAL_CAPACITY)\n",
     "del globals()[\"current_test\"]\n",
-    "del globals()[\"time_test\"]"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "del globals()[\"time_test\"]\n",
+    "\n",
+    "x_norm = rul_handler.Normalization()\n",
+    "train_x, test_x = x_norm.normalize(train_x, test_x)"
+   ]
   },
   {
    "cell_type": "markdown",
