Make same num of feature for train/test

--- a/battery-rul-estimation/experiments/unibo-powertools/lstm_autoencoder_rul_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/lstm_autoencoder_rul_unibo.ipynb
@@ -303,9 +303,9 @@
     "test_x = autoencoder.encoder(test_x).numpy()\n",
     "print(\"compressed train x shape {}\".format(train_x.shape))\n",
     "print(\"compressed test x shape {}\".format(test_x.shape))\n",
+    "test_x = test_x[:,~np.all(train_x == 0, axis=0)]#we need same column number of training\n",
     "train_x = train_x[:,~np.all(train_x == 0, axis=0)]\n",
-    "test_x = test_x[:,~np.all(test_x == 0, axis=0)]\n",
-    "print(\"compressed test x shape without zero column {}\".format(test_x.shape))\n",
+    "print(\"compressed train x shape without zero column {}\".format(train_x.shape))\n",
     "print(\"compressed test x shape without zero column {}\".format(test_x.shape))"
    ],
    "outputs": [],
