--- a/battery-rul-estimation/experiments/unibo-powertools/lstm_autoencoder_rul_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/lstm_autoencoder_rul_unibo.ipynb
@@ -228,22 +228,16 @@
     "print(\"cut train shape {}\".format(train_x.shape))\n",
     "print(\"cut test shape {}\".format(test_x.shape))\n",
     "\n",
-    "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)\n",
-    "\n",
-    "\n",
     "train_y = rul_handler.prepare_y_future(train_names, train_battery_range, train_y_soh, current_train, time_train, CAPACITY_THRESHOLDS)\n",
     "del globals()[\"current_train\"]\n",
     "del globals()[\"time_train\"]\n",
     "test_y = rul_handler.prepare_y_future(test_names, test_battery_range, test_y_soh, current_test, time_test, CAPACITY_THRESHOLDS)\n",
     "del globals()[\"current_test\"]\n",
-    "del globals()[\"time_test\"]"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "TbntMzBZkZM9",
-    "tags": []
-   }
+    "del globals()[\"time_test\"]\n",
+    "\n",
+    "x_norm = rul_handler.Normalization()\n",
+    "train_x, test_x = x_norm.normalize(train_x, test_x)"
+   ]
   },
   {
    "cell_type": "markdown",
